<resources>
  <string name="app_name">MatchMaker</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="tournaments">Tournaments</string>
  <string name="messages">Messages</string>
  <string name="meetups">Meetups</string>
  <string name="matches">Matches</string>
  <string name="client_id">383279731938-jlr3bgs9rn95dkoca4ithj6m2ousejak.apps.googleusercontent.com</string>
  <string name="sign_out">sign out</string>
  <string name="sign_in_fail">Unable to sign in with provided credentials</string>
  <string name="msg_token_fmt">PlaceHolder</string>
  <string name="default_notification_channel_id">PlaceHolder2</string>
  <string name="fcm_message">PlaceHolder3</string>
  <string name="copyright">Copyright KJM Enterprise</string>
  <string name="welcome_sign_in">Welcome To MatchMaker</string>
  <string name="welcome_tag_line">One Up Your Gaming Network</string>
  <string name="match">Match</string>
  <string name="pass">Pass</string>
  <string name="bio_jimmthy">Bio: An avid gamer looking for reliable gaming partners.</string>
  <string name="preferences_jimmothy">Preferences: PC, Steam, Xbox</string>
  <string name="name_jimmothy">Name:Jimmothy</string>
  <string name="profile_settings">Profile Settings</string>
  <string name="user_name">First Name</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="use_location">Use Location</string>
  <string name="save_changes">Save Changes</string>
  <string name="discard_changes">Discard Changes</string>
  <string name="delete_account">Delete Account</string>
  <string name="change_profile_photo">Change Profile Photo</string>
</resources>
