<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background='@drawable/bg_user_settings'
  tools:context="edu.cnm.deepdive.matchmaker.controller.UserProfileFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/profile_settings"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="#000000"
      android:textSize="36sp"
      android:text="@string/profile_settings"
      android:textAlignment="center"/>

    <ImageView
      android:id="@+id/imageView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/james_match_maker"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
      android:id="@+id/location_switch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/use_location"/>
    <Button
      android:id="@+id/save_changes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/save_changes"/>
    <Button
      android:id="@+id/discard_changes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/discard_changes"/>
    <Button
      android:id="@+id/delete_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_account"/>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
