<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

<ImageView
android:src="@drawable/bg_pixel_heart"
android:adjustViewBounds="true"
android:scaleType="centerCrop"
android:layout_width="match_parent"
android:layout_height="fill_parent"/>


<TextView
android:id="@+id/sign_in_welcome"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/welcome_sign_in"
android:textColor="@color/colorPrimary"
android:textSize="24sp"
app:layout_constraintLeft_toLeftOf="parent"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toBottomOf="@id/sign_in"/>

  <TextView
  android:id="@+id/sign_in_sub"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/welcome_tag_line"
  android:textColor="@color/colorPrimary"
  android:textSize="24sp"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintTop_toBottomOf="@id/sign_in_welcome"/>

  <TextView
  android:id="@+id/copyright"
  android:layout_width="match_parent"
  android:layout_height="569dp"
  android:text="@string/copyright"
  android:textColor="@color/colorPrimaryDark"
  android:textSize="8sp"
  android:textAlignment="center"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintEnd_toStartOf="parent"
  app:layout_constraintTop_toBottomOf="@+id/sign_in_sub"/>

  <com.google.android.gms.common.SignInButton
  android:id="@+id/sign_in"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  app:layout_constraintTop_toTopOf="parent"
  app:layout_constraintBottom_toBottomOf="parent"
  app:layout_constraintLeft_toLeftOf="parent"
  app:layout_constraintRight_toRightOf="parent"
  app:layout_constraintVertical_bias="0.30"/>

</android.support.constraint.ConstraintLayout>